fix secondary color for dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,7 +23,6 @@
     --primary-foreground: 210 40% 98%;
 
     --secondary: 270 80% 50%;
-
     --secondary-foreground: 222.2 47.4% 11.2%;
 
     --accent: 210 40% 96.1%;
@@ -65,7 +64,7 @@
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 1.2%;
 
-    --secondary: 217.2 32.6% 17.5%;
+    --secondary: 270 70% 60%;
     --secondary-foreground: 210 40% 98%;
 
     --destructive: 0 62.8% 30.6%;
